修正了圖片跑不出來的問題

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <header class="hero">
       <div class="hero-inner container">
-        <div class="hero-left">
-          <img class="profile" src="me.jpg" alt="Jonas 照片">
-        </div>
+      <div class="hero-left">
++          <img class="profile" src="我的照片.jpg" alt="Jonas 照片">
++        </div>
         <div class="hero-right">
           <h1>哈瞜！我是 <span class="name">黃煜翔</span></h1>
           <p class="contact">想找我 → <a href="mailto:0530jonas@gmail.com">0530jonas@gmail.com</a></p>
