調整我的照片、名字、標籤雲、火柴人動畫位置，換火柴人的圖

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 +          <img class="profile" src="我的照片.jpg" alt="Jonas 照片">
 +        </div>
         <div class="hero-right">
-          <h1>哈瞜！我是 <span class="name">黃煜翔</span></h1>
+          <h1>哈囉！我是 <span class="name">黃煜翔</span></h1>
           <p class="contact">想找我 → <a href="mailto:0530jonas@gmail.com">0530jonas@gmail.com</a></p>
         </div>
       </div>
@@ -23,9 +23,9 @@
       <section id="skills" class="section skills">
         <h2>技能</h2>
         <div class="tag-cloud">
-          <span class="tag tag-xl">幻想</span>
           <span class="tag tag-lg">長跑</span>
           <span class="tag tag-md">程式</span>
+          <span class="tag tag-xl">幻想</span>
           <span class="tag tag-sm">畫畫</span>
         </div>
       </section>
